test/tasty/pos/src-2/Testdotty_i3816.scala
object Testdotty_i3816 {
  val di = new DottyIterable {}
  val x: di.DD[Int] = ???
}
